# test_work_so

teeee/test_work/: Cargo.toml
teeee/test_work/src/e2e/: Cargo.toml  e2e.rs
teeee/test_work/src/reg/: Cargo.toml
teeee/test_work/src/str/: Cargo.toml
test_work/src/reg/: regr.rs
test_work/src/str/: str_test.rs
