[package]
name = "reg"
version = "0.1.0"
edition = "2024"
description = "Mobile OS Performance Regression Testing Agent"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["full"]
full = ["bench", "plot", "watch", "tracing"]
bench = ["dep:test"]
plot = ["dep:plotters"]
watch = ["dep:notify"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sysinfo = "0.30"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# System utilities
num_cpus = "1.16"
fs2 = "0.4"
nix = { version = "0.27", features = ["fs", "process", "time"] }
hostname = "0.3"
rustc_version = "0.4"

# Optional features
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"] }
plotters = { version = "0.3", optional = true, default-features = false, features = ["bitmap_backend", "line_series"] }
notify = { version = "6.1", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
test = { package = "test", path = "libtest" }
rand = "0.8"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = ["."]

[[bin]]
name = "bench-agent"
path = "src/main.rs"
required-features = ["full"]

[lib]
name = "mobile_os_bench"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = []

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
sign-commit = false
push-remote = "origin"
pre-release-commit-message = "chore: release {{version}}"
tag-message = "{{version}}"
tag-name = "v{{version}}"
