[package]
name = "str"
version = "0.1.0"
edition = "2024"

description = "Stress tests for Mobile Operating System"
license = "MIT OR Apache-2.0"

[features]
default = ["full"]
full = ["android", "ios", "bench", "plot", "watch"]
android = ["dep:jni", "dep:android_logger"]
ios = ["dep:objc", "dep:core-foundation"]
bench = ["dep:test"]
plot = ["dep:plotters"]
watch = ["dep:notify"]

[dependencies]
# Core dependencies
rand = "0.8"
backtrace = "0.3"
fs2 = "0.4"
num_cpus = "1.16"
libc = "0.2"
nix = { version = "0.27", features = ["fs", "process", "time", "ioctl", "sched"] }
memmap2 = "0.9"
tempfile = "3.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hostname = "0.3"
sysinfo = "0.30"

# Async runtime
tokio = { version = "1.35", features = ["full", "rt", "time", "sync"] }
futures = "0.3"

# Networking
reqwest = { version = "0.11", features = ["json"], optional = true }
ping = "0.4"

# Stress test specific
stress-ng = { version = "0.1", optional = true }  # Wrapper around stress-ng tool

# Optional features
plotters = { version = "0.3", optional = true, default-features = false, features = ["bitmap_backend", "line_series", "area_series"] }
notify = { version = "6.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# Platform-specific
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }
android_logger = { version = "0.13", optional = true }
android_injector = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = { version = "0.2", optional = true }
core-foundation = { version = "0.9", optional = true }
core-foundation-sys = "0.8"
io-kit-sys = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[dev-dependencies]
test = { package = "test", path = "libtest", optional = true }
criterion = { version = "0.5", optional = true }

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.stress]
inherits = "release"
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1

[[test]]
name = "cpu_stress"
path = "tests/cpu_stress.rs"
required-features = []

[[test]]
name = "memory_stress"
path = "tests/memory_stress.rs"
required-features = []

[[test]]
name = "io_stress"
path = "tests/io_stress.rs"
required-features = []

[[test]]
name = "network_stress"
path = "tests/network_stress.rs"
required-features = ["dep:reqwest"]

[[test]]
name = "thermal_stress"
path = "tests/thermal_stress.rs"
required-features = []

[[test]]
name = "gpu_stress"
path = "tests/gpu_stress.rs"
required-features = []

[[test]]
name = "multimedia_stress"
path = "tests/multimedia_stress.rs"
required-features = []

[[test]]
name = "comprehensive_stress"
path = "tests/comprehensive_stress.rs"
required-features = ["full"]

[package.metadata.stress]
duration = "3600"  # Default 1 hour
threads = "auto"
memory = "80%"  # Use 80% of available memory

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
